# chat-cloner

./: .cursorrules  .env.example  .gitignore  README.md  __init__.py  batch.txt  cli.py  config.py  database.py  doc.md  engine.py  main.py  processor.py  pyproject.toml  requirements.txt  reset_timestamp.py  retry_utils.py  test_db.py  test_publish_db.py  test_publish_pipeline.py  test_publish_upload.py
clonechat/: __init__.py  cli.py  config.py  database.py  engine.py  logging_config.py  processor.py  retry_utils.py
clonechat/tasks/: __init__.py  publish_pipeline.py
data/: clonechat.db-journal
data/project_workspace/4_anos_mel/: descriptions.xlsx  summary.txt  upload_plan.csv  video_details_1_origin.csv  video_details_2_reencode.csv  video_details_5_splited.csv
data/project_workspace/4_anos_mel/metadata/: vidmd_video 1_0a357.json  vidmd_video 2_0a357.json  vidmd_video 3_0a357.json
data/project_workspace/4_anos_mel/output_videos/: 4_anos_mel-001.zip.001
docs/: architecture.md  requirements.md
